spacing fixed

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -110,6 +110,7 @@ main {
     cursor: pointer;
     transition: background-color 0.2s;
     position: relative;
+    gap: 0.25em;
 }
 
 .chat_history_list:hover {
@@ -125,6 +126,7 @@ main {
     width: 40px;
     height: 40px;
     min-width: 40px;
+    margin-right: 0.25em;
 }
 
 .chat_history_list_img img {
@@ -156,7 +158,7 @@ main {
 .chat_right_top_profile {
     display: flex;
     align-items: center;
-    gap: 1em;
+    gap: 0.5em;
 }
 
 .chat_right_top_profile_img {
@@ -164,6 +166,7 @@ main {
     width: 36px;
     height: 36px;
     min-width: 36px;
+    margin-right: 0.25em;
 }
 
 .active_status {
